--- a/index.html
+++ b/index.html
@@ -6,23 +6,56 @@
   <title>Peter Calabrese</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Peter</h1>
-    <p> A programmer</p>
+    <h2> A programmer</h2>
     <img class="bottom-cloud"src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img  src="images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
-
+    <div class="profile">
+      <img class="self-img" src="images/husky.png" alt="">
+      <h2>Hello.</h2>
+      <p class="intro">I am a Software Engineer, I brew beer and am a yard haunter.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="skill1-img" src="images/disney-castle.jpg" alt="">
+        <h3>Disney Expert</h3>
+        <p class="skill1-desc">Planning Disney World trips, booking dining, fastpasses, and reservations.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skill2-img" src="images/jacko.gif" alt="">
+        <h3>Yard Haunter</h3>
+        <p class="skill2-desc">Design and develop props, lighting animatronics.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:pcalabrese@optonline.net">CONTACT ME</a>
+    </div>
   </div>
+
+
   <div class="bottom-container">
-
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copy-desc">© Peter Calabrese.</p>
   </div>
+
 </body>
 
 </html>
